Fixed onUpdateSync not being called Renamed InventoryAPI.craftCustomCache to InventoryAPI.getNewCacheInstance