@@ -25,7 +25,7 @@ public class InventoryAPI<T extends CustomCache> implements Listener {
 
     private final Plugin plugin;
     private final WolfyUtilities wolfyUtilities;
-    private final HashMap<UUID, GuiHandler<?>> guiHandlers = new HashMap<>();
+    private final HashMap<UUID, GuiHandler<T>> guiHandlers = new HashMap<>();
     private final HashMap<String, GuiCluster> guiClusters = new HashMap<>();
 
     private final Class<T> customCacheClass;
@@ -114,7 +114,7 @@ public class InventoryAPI<T extends CustomCache> implements Listener {
     }
 
     @Nonnull
-    public GuiHandler<?> getGuiHandler(Player player) {
+    public GuiHandler<T> getGuiHandler(Player player) {
         if (!hasGuiHandler(player)) {
             createGuiHandler(player);
         }
@@ -122,11 +122,11 @@ public class InventoryAPI<T extends CustomCache> implements Listener {
     }
 
     private void createGuiHandler(Player player) {
-        GuiHandler<T> guiHandler = new GuiHandler<>(player, wolfyUtilities, craftCustomCache());
+        GuiHandler<T> guiHandler = new GuiHandler<>(player, wolfyUtilities, customCacheClass, craftCustomCache());
         setPlayerGuiStudio(player, guiHandler);
     }
 
-    private void setPlayerGuiStudio(Player player, GuiHandler<?> guiStudio) {
+    private void setPlayerGuiStudio(Player player, GuiHandler<T> guiStudio) {
         guiHandlers.put(player.getUniqueId(), guiStudio);
     }
 
@@ -164,10 +164,15 @@ public class InventoryAPI<T extends CustomCache> implements Listener {
         });
     }
 
+    @Deprecated
     public T craftCustomCache() {
+        return getNewCacheInstance();
+    }
+
+    public T getNewCacheInstance() {
         try {
-            return this.customCacheClass.newInstance();
-        } catch (InstantiationException | IllegalAccessException e) {
+            return this.customCacheClass.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             e.printStackTrace();
         }
         return null;
@@ -192,7 +197,7 @@ public class InventoryAPI<T extends CustomCache> implements Listener {
     public void onInvClick(InventoryClickEvent event) {
         if (event.getClickedInventory() != null) {
             if (hasGuiHandler((Player) event.getWhoClicked())) {
-                GuiHandler<?> guiHandler = getGuiHandler((Player) event.getWhoClicked());
+                GuiHandler<T> guiHandler = getGuiHandler((Player) event.getWhoClicked());
                 if (guiHandler.verifyInventory(event.getView().getTopInventory())) {
                     GuiWindow guiWindow = guiHandler.getCurrentInv();
                     event.setCancelled(true);
